--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -74,6 +74,7 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
+  position: relative;
 }
 
 #footer-logo {
@@ -158,14 +159,14 @@ button:active {
 }
 
 /* Add styles to the form container */
-.form-container {
+.form, .editForm {
   width: 400px;
   font-size: 16px;
   padding: 10px;
   position: relative;
 }
 
-.form-container input[type=text] {
+.form input[type=text], .editForm input[type=text] {
   width: 370px;
   padding: 15px;
   margin: 5px 0 22px 0;
@@ -181,12 +182,12 @@ button:active {
   margin-top: 8px;
 }
 
-.form-container input[type=text]:focus {
+.form input[type=text]:focus, .editForm input[type=text]:focus {
   background-color: #ddd;
   outline: none;
 }
 
-.form-container .btn {
+.form .btn, .editForm .btn {
   background-color: #5E5E5E;
   color: white;
   padding: 16px 20px;
@@ -197,12 +198,12 @@ button:active {
   opacity: 0.8;
 }
 
-.form-container .cancel {
+.form .cancel, .editForm .cancel {
   background-color: #101010;
   color: white;
 }
 
-.form-container .btn:hover, .open-button:hover {
+.form .btn:hover, .open-button:hover, .editForm .btn:hover{
   opacity: 1;
 }
 
@@ -217,14 +218,14 @@ button:active {
 }
 
 .opened {
-  transform: scale(1);
-  transition: 0.5s ease-in-out;
+  transform: scale(1) !important;
+  transition: 0.5s ease-in-out !important;
 }
 
 .closed {
-  transform: scale(0);
-  transition: 0.5s ease-in-out;
-  display: none;
+  transform: scale(0) !important;
+  transition: 0.5s ease-in-out !important;
+  display: none !important;
 }
 
 textarea {
@@ -292,4 +293,31 @@ textarea {
 
 .selected {
   background: linear-gradient(white, #a8a8a8) !important;
+}
+
+/* .editButton {
+  background: url(../assets/file-edit-outline.svg) no-repeat;
+  width: 45px;
+  height: 45px;
+  border: 0;
+  padding: 0;
+  appearance: none;
+  position: relative;
+  right: 150px;
+  top: 18px;
+  filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
+} */
+
+.edit-form-popup {
+  transform: scale(0);
+  z-index: 9;
+  position: fixed;
+  background: #2d2d2d;
+  border-radius: 12px;
+  color: white;
+  opacity: 55;
+}
+
+input[data-input] {
+  margin-left: 5px;
 }
