--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -345,12 +345,12 @@ input[data-input] {
   margin-left: 5px;
 }
 
-#confirm {
+#confirm, #close {
   height: 20px;
   filter: invert(14%) sepia(9%) saturate(2941%) hue-rotate(221deg) brightness(93%) contrast(81%);
 }
 
-.confirm {
+.confirm, .close {
   background: transparent;
   border: 1px;
   border-radius: 12px;
@@ -369,15 +369,26 @@ input[data-input] {
   align-items: center;
 }
 
+.projectForm {
+  display: flex;
+  align-items: center;
+}
+
 .projectName input[type=text] {
   border-radius: 12px;
   background-color: #382F47;
   color: #ADAAA1;
   margin: 5px;
   margin-right: 2px;
+  width: 175px;
+  height: 27px;
 }
 
-.proj {
+.projButtons {
+  display: flex;
+}
+
+button[data-project] {
   background: none;
   border: 0;
   cursor: pointer;
@@ -385,8 +396,22 @@ input[data-input] {
   text-align: left;
   display: flex;
   align-items: center;
+  align-content: center;
+  justify-content: space-between;
   border-radius: 12px;
-  padding: 5px;
+  padding: 8px;
   margin: 5px;
   color: #382F47;
+  font-weight: 900;
+}
+
+.projDel {
+  background: url(../assets/trash-can-outline.svg) no-repeat;
+  width: 20px;
+  height: 20px;
+  border: 0;
+  padding: 0;
+  appearance: none;
+  z-index: 9;
+  filter: invert(14%) sepia(9%) saturate(2941%) hue-rotate(221deg) brightness(93%) contrast(81%);
 }
